[tool.poetry]
name = "riic-simulator"
version = "0.1.0"
description = ""
authors = ["Zhao Zuohong <zhbaor@zhaozuohong.vip>"]
readme = "README.md"
packages = [{include = "riic_simulator"}]

[tool.poetry.dependencies]
python = "^3.9"
pydispatcher = "^2.0.7"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
